objects/TestCustomObject__c.object
<CustomObject>
    <fields>
        <fullName>TestCustomField2__c</fullName>
        <label>TestCustomField2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestCustomFieldx__c</fullName>
        <inlineHelpText>helptestvenky</inlineHelpText>
        <label>TestCustomField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestCustomfield123__c</fullName>
        <label>TestCustomfield123</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TestCustomObject</label>
    <nameField>
        <label>TestCustomObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestCustomObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>